# Pitie-salpetriere-hopital-app

./: README.md
.devcontainer/: devcontainer.json
notebooks/: EDA.ipynb  Generateur_dataset.ipynb  modelisation.ipynb
streamlit-app-template/: .gitignore  .pre-commit-config.yaml  Home.py  LICENSE  README.md  config.py  pyproject.toml  requirements.txt  utils.py
streamlit-app-template/.streamlit/: config.toml
streamlit-app-template/assets/css/: style.css
streamlit-app-template/data/: model_data.csv  sales_data.parquet
streamlit-app-template/models/: model_nb_aides_soignants.pkl  model_nb_infirmiers.pkl  model_nb_medecins.pkl  onehot_encoder.pkl  ordinal_encoder.pkl  prophet_model.pkl  scaler.pkl
streamlit-app-template/pages/: 1_📊_Exploratory_Analysis.py  2_📈_Advanced_Visualizations.py  3_🔮_Predictions.py
