[project]
name = "streamlit-app-template"
version = "0.1.0"
description = "Application de gestion hospitalière intégrant un dashboard, EDA, et des prévisions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pre-commit>=4.1.0",
    "pyarrow>=19.0.1",
    "streamlit>=1.43.1",
    "statsmodels>=0.14.0",
    "joblib>=1.3.0",
    "prophet>=1.1",
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
]

[tool.setuptools.packages.find]
include = ["data","assets","models", "pages"]

